<resources>
    <string name="app_name">Football Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="string_generator"><b>Bienvenue sur l\'application Football Manager !</b> \n Cette application est un projet pour le cours de Technologie Mobile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accueil">Accueil</string>
    <string name="joueurs">Joueurs</string>
    <string name="courrier">Courrier</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_create_mail">Créer un mail !</string>
    <string name="ajouter_un_joueur">Ajouter un joueur</string>
    <string name="panneau_d_administration">Panneau d\'administration</string>
    <string name="envoyes">Envoyés</string>
    <string name="reception">Réception</string>
    <string name="creer">Créer</string>
    <string name="infrastructures">Infrastructures</string>
    <string name="Outils">Outils</string>
</resources>
