<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Menu">
        <menu>
            <item
                android:id="@+id/nav_accueil"
                android:icon="@drawable/home_24dp"
                android:title="@string/accueil" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_players"
            android:icon="@drawable/players_24dp"
            android:title="@string/joueurs" />
        <item
            android:id="@+id/nav_infrastructures"
            android:icon="@drawable/infrastructure_24dp"
            android:title="@string/infrastructures" />
        <item
            android:id="@+id/nav_courriel"
            android:icon="@drawable/letter_24dp"
            android:title="@string/courrier" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/dashboard_24dp"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/camera_24dp"
            android:title="@string/Outils" />
    </group>
</menu>
