<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_degradee_reverse"
        android:orientation="horizontal"
        android:gravity="top|right"
        android:layout_marginBottom="-3dp">
    <Button
        android:id="@+id/ajout_joeurs"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/ajouter_un_joueur"
        android:background="@color/colorBlue"
        android:textColor="@android:color/white"
        android:layout_marginRight="20dp"/>
        <!-- To do: Finir le bouton + on click-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/letter_24dp"
        android:layout_gravity="center"
        android:layout_marginRight="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/panneau_d_administration"
            android:background="@drawable/background_degradee"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_marginBottom="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="177dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_margin="10dp"
                android:background="@color/colorWhite"
                android:minWidth="150dp"
                android:minHeight="50dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/joueurs"
                    android:textStyle="bold" />

                <TextView
                    android:text="Moyenne de l'attaque:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textview_moyenneA"
                    android:text="test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="Moyenne de la défene::"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textview_moyenneD"
                    android:text="test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="10dp"
                android:layout_marginRight="-150dp"
                android:background="@color/colorWhite"
                android:minWidth="150dp"
                android:minHeight="50dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infrastructures"
                    android:textStyle="bold" />

                <TextView
                    android:text="Nombre total de ballons:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textview_nbballons"
                    android:text="test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>